# lepakko

./: .gitignore  README.md  pyproject.toml
hardware/: BOM.md  BUILD.md
src/batsound/: __init__.py  classify.py  cli.py  detection.py  visualization.py
src/batsound/live/: __init__.py  app.py  spectrogram_widget.py  stream.py
src/lepakko/: __init__.py  analysis.py  cli.py  io.py
src/lepakko/live/: app.py  audio_output.py  stream.py
tests/: test_analysis.py  test_io.py  test_live_audio.py  test_live_stream.py
