[project]
name = "batsound"
version = "0.1.0"
description = "Bat echolocation analysis and acquisition"
readme = "README.md"
authors = [
    { name = "Louis Apffel", email = "louis.apffel@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "soundfile>=0.12",
    "scipy>=1.11",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "click>=8.1",
    "PyQt6>=6.5",
    "pyqtgraph>=0.13",
    "sounddevice>=0.4",
]

[project.scripts]
batsound = "batsound.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
